# opengl_rust

./: Cargo.toml
content/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: debugger.rs  main.rs  shaders.rs  texture.rs
